Header redesign, added new logo, added aside for white progress band over the header, refactoring of smaller resolutions nav-toggle and search toggle, search panel fixed for smaller resolutions, hiding edit this page for under 500px, because of overlapping

--- a/_assets/stylesheets/styles.css
+++ b/_assets/stylesheets/styles.css
@@ -26,11 +26,72 @@ a img {
     border-width: 0;
 }
 
+.TK-Hat {
+    padding-left: 15px;
+    padding-right: 15px;
+    border-bottom: 1px solid #eff0f1;
+    color: #4d4f52;
+    background: #ffffff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 42042;
+}
+.TK-Hat::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+.TK-Hat *,
+.TK-Hat:after,
+.TK-Hat:before {
+    box-sizing: border-box;
+}
+.TK-Hat-Brand {
+    float: left;
+    width: 150px;
+    margin: 0;
+}
+.TK-PRGS-Logo {
+    display: block;
+    outline: none!important;
+    text-decoration: none!important;
+    transition: color .1s linear, background .1s linear, opacity .1s linear;
+}
+.TK-PRGS-Logo:focus,
+.TK-PRGS-Logo:hover {
+    opacity: .75;
+}
+.TK-PRGS-Logo svg {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+}
+@media only screen and (max-width: 1100px) and (min-width: 880px) {
+   .TK-Hat-Brand {
+         width: 120px;
+         min-width: 120px;
+     }
+}
+@media only screen and (max-width: 880px) {
+    .TK-Hat-Brand {
+        width: 100px;
+        min-width: 100px;
+    }
+}
+
 /* Header */
 #page-header {
     background-color: #2a2d33;
     font-size: 12px;
-	height: 85px;
+	height: 80px;
+    padding: 20px 0 20px 15px;
+    width: 100%;
+    box-sizing: border-box;
+    position: fixed;
+    top: 41px;
+    z-index: 100;
 }
 
 #page-header:after {
@@ -48,9 +109,7 @@ a img {
     font-size: 14px;
 	float: left;
     /*margin-bottom: 1.717em;*/
-    margin-left: 1.833em;
-    margin-top: 1.617em;
-	width: 341;
+	width: 404px;
 }
 
 #logo-bar a,
@@ -67,8 +126,8 @@ a img {
 	width: 100%;
  }
 
-
 .nav-buttons {
+    margin-top: 3px;
     float: right;
 }
 
@@ -82,9 +141,9 @@ a img {
     display: inline-block;
     font-size: 15px;
     font-weight: bold;
-    line-height: 0.933em;
-    margin: 1.467em 0.267em;
-    padding: 0.667em 2em;
+    line-height: 1.33334;
+    margin: 0 4px;
+    padding: 6px 30px;
     position: relative;
     text-align: center;
     transition-duration: 0.2s;
@@ -150,15 +209,15 @@ a img {
     background: transparent; 
     display: none; 
     position: relative;
-    margin-left: 1.833em;
     cursor: pointer;
-	top:12px;
+    vertical-align: top;
+    margin: 10px 0 0 0;
 }
 
 #page-search {
     margin: 0;
     position: absolute;
-    top: 10px;
+    top: 11px;
     background-color: transparent;
     padding: 0;
     right: 514px;
@@ -169,12 +228,10 @@ a img {
 #page-search.search-visibility {
     background-color: #2a2d33;
     display: block;
-    left: 1.83em;
+    left: 45px;
     margin-top: 0;
-    position: relative;
-    right: 1.83em;
-    top: -1.7em;
-    width: calc(100% - 3.666em);
+    right: 45px;
+    width: calc(100% - 90px);
 }
 
 #page-search form > table {
@@ -460,6 +517,7 @@ a img {
     overflow: hidden;
     margin: 0;
 	clear: both;
+    top: 120px;
 }
 
 #page-inner-content:after {
@@ -683,7 +741,6 @@ a.footer-links:hover {
 
 .logo {
     font-size: 14px;
-    margin-left: 29px;
 }
 
 .logo em {
@@ -896,14 +953,15 @@ header, nav, section, article, aside, footer {
 
     .toggle-nav {
         display: inline-block;
+        float: left;
     }
 
     #logo-bar,
 	#logo-bar-sl {
-		position: absolute;
-		top: 12px;
+		position: relative;
+		
 		margin-top: 0px;
-		margin-left: 5em;
+		margin-left: 20px;
     }
 
     #page-search {
@@ -945,12 +1003,12 @@ header, nav, section, article, aside, footer {
     .show-search {
         display: inline-block;
         margin: 0;
-        position: absolute;
-        top: 11px;
-        padding: 0;
-        right: 1.833em;
-        text-align: right;
+        top: 25px;
         left: auto;
+        right: 1.883em;
+        position: absolute;
+        padding: 0;
+        text-align: right;
         cursor: pointer;
     }	
 
@@ -963,6 +1021,9 @@ header, nav, section, article, aside, footer {
 	#logo-bar-sl {
 		width: 0px;
 	}
+    #page-edit-link{
+        display: none;
+    }
 }
 
 /* SART Feedback form styles */
